# defi-liquidation-guardian

./: .gitignore  Cargo.toml  docker-compose.yml
api/: Cargo.toml
api/src/: main.rs  router.rs
automation/: Cargo.toml
config/: dev.toml  production.toml  staging.toml
shared/: Cargo.toml
shared/src/: config.rs  errors.rs  lib.rs  logging.rs
