[workspace]
members = [
    "shared",
    "monitoring",
    "automation",
    "api"
]
resolver = "3"

[workspace.dependencies]
tokio = {version = "1.45.1", features = ["full"]}
serde = {version = "1.0.219", features = ["derive"]}
serde_json = "1.0.140"

tracing = "0.1.41"
thiserror = "2.0.12"
anyhow = "1.0.98"

[workspace.dev-dependencies]
proptest = "1.7.0"
criterion = "0.6.0"
