[package]
name = "api"
version = "0.1.0"
edition = "2024"

[dependencies]
shared = { path = "../shared" }
serde = { workspace = true }
toml = { workspace = true }
anyhow = { workspace = true }
tracing = {workspace = true}

axum = "0.8.4"
tower-http = {version = "0.6.6", features = ["trace"]}
uuid = {version = "1.17.0", features = ["v4"] }
tokio = {workspace = true}
